--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ lxml = "^5.2.2"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
 mypy = "^1.10.0"
+frozen-flask = "^1.0.2"
 
 
 [build-system]
