--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,29 @@
-[tool.poetry]
+[project]
 name = "pyrva-github-io"
 version = "2024.06"
 description = "PyRVA Website"
-authors = ["Brian Cohan <briancohan@gmail.com>"]
 readme = "README.md"
-packages = [{include = "pyrva", from = "src"}]
-
-[tool.poetry.dependencies]
-python = "^3.11"
-flask = "^3.0.3"
-python-dotenv = "^1.0.1"
-requests = "^2.32.3"
-bs4 = "^0.0.2"
-lxml = "^5.2.2"
-
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^3.7.1"
-mypy = "^1.10.0"
-frozen-flask = "^1.0.2"
+authors = [
+    {name = "Brian Cohan", email = "briancohan@gmail.com"},
+]
+requires-python = "<4.0,>=3.11"
+dependencies = [
+    "bs4<1.0.0,>=0.0.2",
+    "flask<4.0.0,>=3.0.3",
+    "lxml<6.0.0,>=5.2.2",
+    "python-dotenv<2.0.0,>=1.0.1",
+    "requests<3.0.0,>=2.32.3",
+]
 
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "frozen-flask<2.0.0,>=1.0.2",
+    "mypy<2.0.0,>=1.10.0",
+    "pre-commit<4.0.0,>=3.7.1",
+    "ruff>=0.9.2",
+    "types-beautifulsoup4>=4.12.0.20241020",
+]
 
 
 [tool.ruff]
